--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                          <img src="assets/images/dslogo-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.co">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
                         DandySquad :3</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="page2.html"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>EXPLOITS</a>
+                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>EXPLOITS</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>SCRIPTS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
 
     
 
