--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/dslogo-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
 
     
 
