--- a/page1.html
+++ b/page1.html
@@ -39,7 +39,7 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.co">
+                    <a href="index.html">
                          <img src="assets/images/dslogo-122x122.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="features3 cid-rRldXywro0" id="features3-6">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="features3 cid-rRldXywro0" id="features3-6">
 
     
 
@@ -76,8 +76,8 @@
                         <h4 class="card-title mbr-fonts-style display-7">Break In [OP GUI]</h4>
                         <p class="mbr-text mbr-fonts-style display-7">-FREE ITEMS<br>-INF MONEY<br>-HEAL ALL<br>And more</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
-                            DOWNLOAD</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://raw.githubusercontent.com/dandysquad/dandysquad.github.io/master/scripts/Break%20In.txt" class="btn btn-primary display-4" target="_blank">
+                            VIEW</a></div>
                 </div>
             </div>
 
@@ -91,8 +91,8 @@
                         <p class="mbr-text mbr-fonts-style display-7">
                             Admin Commands<br>Auto Updating Script</p>
                     </div>
-                    <div class="mbr-section-btn text-center"><a href="https://mobirise.co" class="btn btn-primary display-4">
-                            DOWNLOAD</a></div>
+                    <div class="mbr-section-btn text-center"><a href="https://raw.githubusercontent.com/dandysquad/dandysquad.github.io/master/scripts/Infinite%20Yield.txt" class="btn btn-primary display-4">
+                            VIEW</a></div>
                 </div>
             </div>
 
