--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="https://mobirise.co"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>EXPLOITS</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>SCRIPTS</a></li>
+                    <a class="nav-link link text-white display-4" href="exploits.html"><span class="mbri-play mbr-iconfont mbr-iconfont-btn"></span>EXPLOITS</a>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="scripts.html"><span class="mbri-speed mbr-iconfont mbr-iconfont-btn"></span>SCRIPTS</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         <font face="MobiriseIcons"></font></a>
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
 
     
 
