--- a/scripts.html
+++ b/scripts.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="features3 cid-rRldXywro0" id="features3-6">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="features3 cid-rRldXywro0" id="features3-6">
 
     
 
