--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="header6 cid-rRlqrsmp9f mbr-fullscreen" id="header6-7">
 
     
 
@@ -73,7 +73,7 @@
                     WELCOME           </h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-5">to DandySquad :3</p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-primary display-4" href="scripts.html">SCRIPTS</a>
-                        <a class="btn btn-md btn-white-outline display-4" href="https://x.synapse.to" target="_blank">BUY SYNAPSE X</a></div>
+                        <a class="btn btn-md btn-white-outline display-4" href="https://x.synapse.to" target="_blank">DANDY X</a></div>
             </div>
         </div>
     </div>
